<?xml version="1.0"?>
<package format="2">
  <name>mlcs_gazebo_plugins</name>
  <version>2.8.7</version>
  <description>
    mlcs_gazebo_plugins provides gazebo plugins from Machine Learning and Control Systems lab., Yonsei University, South Korea.
  </description>

  <maintainer email="jaehyunlim@yonsei.ac.kr">Jaehyun Lim</maintainer>

  <license>BSD, Apache 2.0</license>

  <url type="website">https://github.com/MLCS-Yonsei/mlcs_gazebo_plugins</url>
  <url type="bugtracker">https://github.com/MLCS-Yonsei/mlcs_gazebo_plugins</url>
  <url type="repository">https://github.com/MLCS-Yonsei/mlcs_gazebo_plugins</url>

  <author>Jaehyun Lim</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_dev</build_depend>
  <exec_depend>gazebo_dev</exec_depend>

  <depend>gazebo_ros</depend>
  <depend>gazebo_msgs</depend>
  <depend>gazebo_plugins</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>std_srvs</depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>angles</depend>
  <depend>nav_msgs</depend>
  <depend>urdf</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>rosgraph_msgs</depend>
  <depend>image_transport</depend>
  <depend>rosconsole</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>cv_bridge</depend>
  <depend>polled_camera</depend>
  <depend>diagnostic_updater</depend>
  <depend>camera_info_manager</depend>
  <depend>std_msgs</depend>

  <test_depend>rostest</test_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/../../lib" gazebo_media_path="${prefix}" />
  </export>
</package>
